fm-domain goes kotlin (ii)